# curry-club-augsburg.de

./: .gitignore  .travis.yml  404.html  CNAME  COPYING.md  LICENSE.CC  LICENSE.MIT  README  README.md  atom.xml  circle.yml  css.hs  curry-club-augsburg-de.cabal  curry-club-augsburg.cabal  curry-site.hs  default.nix  deploy.sh  haskell-augsburg-de.cabal  index.html  nixpkgs.json  nixpkgs.nix  release.nix  rss.xml  shell.nix  site  site.hs  stack.yaml
.github/workflows/: main.yml
css/: Main.hs  default.css  default.hs  ubuntu.css
files/: 10-modern-concepts.tex  Examples.thy  baum.fig
files/10-modern-concepts/: 10-modern-concepts.tex  baum.pspdftex
files/haskellworkshop-plakat/: Hyphenator.js  README.md  design.css  example.hs  index.html  workshop1.html  workshop2.html  workshop3.html
nix/: sources.json
nix-support/: hydra-build-products
posts/: 2015-03-17-hallo-welt.html  2015-03-17-hallo-welt.md  2015-04-20-ankuendigung-erstes-treffen.html  2015-04-20-ankuendigung-erstes-treffen.md  2015-04-28-erstes-treffen.html  2015-04-28-erstes-treffen.md  2015-05-03-wir-bauen-einen-parserkombinator.html  2015-05-03-wir-bauen-einen-parserkombinator.md  2015-05-15-ankuendigung-zweites-treffen.html  2015-05-15-ankuendigung-zweites-treffen.md  2015-05-26-ankuendigung-drittes-treffen.html  2015-05-26-ankuendigung-drittes-treffen.md  2015-05-27-ankuendigung-viertes-treffen.html  2015-05-27-ankuendigung-viertes-treffen.md  2015-05-28-ankuendigung-fuenftes-treffen.html  2015-05-28-ankuendigung-fuenftes-treffen.md  2015-07-02-drittes-treffen.html  2015-07-02-drittes-treffen.md  2015-07-25-ankuendigung-sechstes-treffen.html  2015-07-25-ankuendigung-sechstes-treffen.md  2015-08-14-ankuendigung-siebtes-treffen.html  2015-08-14-ankuendigung-siebtes-treffen.md  2015-09-16-hitliste-der-ICFP-talks.html  2015-09-16-hitliste-der-ICFP-talks.md  2015-09-19-ankuendigung-achtes-treffen.html  2015-09-19-ankuendigung-achtes-treffen.md  2015-10-14-einladung-haskell-workshop.html  2015-10-14-einladung-haskell-workshop.md  2015-10-27-monaden-in-haskell.html  2015-10-27-monaden-in-haskell.md  2015-11-06-ankuendigung-neuntes-treffen.html  2015-11-06-ankuendigung-neuntes-treffen.md  2015-11-08-achtes-treffen.html  2015-11-08-achtes-treffen.md  2015-11-09-neuntes-treffen.html  2015-11-09-neuntes-treffen.md  2015-12-04-zehntes-treffen.html  2015-12-04-zehntes-treffen.md  2015-12-05-ankuendigung-curry-club-auf-dem-32c3.html  2015-12-05-ankuendigung-curry-club-auf-dem-32c3.md  (+146 more)
src/CurryClub/: Css.hs
templates/: archive.html  default.html  last-meetup.html  meetup-list.html  next-meetup.html  post-list.html  post.html
