name:               curry-club-augsburg-de
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            OtherLicense

executable curry-site
  main-is:          curry-site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.8 && < 4.9
                  , yaml
                  , safe
                  , text
                  , time >= 1.5.0.1
                  , curry-club-augsburg-de
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

executable css
  main-is:          Main.hs
  hs-source-dirs:   css
  build-depends:    base == 4.*
                  , text
                  , curry-club-augsburg-de
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

library
  exposed-modules:  CurryClub.Css
  build-depends:    base == 4.*
                  , clay >= 0.9
                  , text
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010

-- Achtung! Das erzeugte Programm site benoetigt zur korrekten Ausfuehrung
-- eine aktuelle Installation von cabal-install. Sonst funktioniert naemlich
-- "cabal exec runghc" nicht.
