name:               curry-club-augsburg-de
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            OtherLicense

executable curry-site
  main-is:          curry-site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.8 && < 4.13
                  , yaml
                  , safe
                  , time >= 1.5.0.1
                  , unix == 2.7.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

executable css
  main-is:          default.hs
  build-depends:    base == 4.*
                  , clay >= 0.11
                  , text
  hs-source-dirs:   css
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

-- Achtung! Das erzeugte Programm site benoetigt zur korrekten Ausfuehrung
-- eine aktuelle Installation von cabal-install. Sonst funktioniert naemlich
-- "cabal exec runghc" nicht.
   