name:               curry-club-augsburg-de
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            OtherLicense

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , containers
                  , time
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

executable css
  main-is:          default.hs
  build-depends:    base == 4.*
                  , clay >= 0.9
                  , text
  hs-source-dirs:   css
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

-- Achtung! Das erzeugte Programm site benötigt zur korrekten Ausführung
-- eine aktuelle Installation von cabal-install. Sonst funktioniert nämlich
-- "cabal exec runghc" nicht.
