name:               haskell-augsburg-de
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
  ghc-options:      -threaded
  default-language: Haskell2010

executable css
  main-is:          css.hs
  build-depends:    base == 4.*
                  , clay >= 0.9
                  , text
                  , directory
  ghc-options:      -threaded
  default-language: Haskell2010
